--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "d3": "^5.5.0",
     "imgurify": "^2.0.1",
     "spinal-models-context_studio": "git+https://github.com/spinalcom/spinal-models-context_studio.git",
+    "spinal-env-viewer-plugin-apps": "git+https://github.com/spinalcom/spinal-env-viewer-plugin-apps.git",
     "vue-drag-drop": "^1.1.4"
   },
   "homepage": "https://github.com/spinalcom/spinal-env-viewer-plugin-context_studio#readme"
