--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spinal-env-viewer-plugin-context_studio",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "main": "index.vue",
   "scripts": {
@@ -54,8 +54,9 @@
   "dependencies": {
     "d3": "^5.5.0",
     "imgurify": "^2.0.1",
-    "spinal-models-context_studio": "git+https://github.com/spinalcom/spinal-models-context_studio.git",
     "spinal-env-viewer-plugin-apps": "git+https://github.com/spinalcom/spinal-env-viewer-plugin-apps.git",
+    "spinal-models-context_studio": "git+https://github.com/spinalcom/spinal-models-context_studio.git",
+    "vue-color": "^2.7.0",
     "vue-drag-drop": "^1.1.4"
   },
   "homepage": "https://github.com/spinalcom/spinal-env-viewer-plugin-context_studio#readme"
